; ModuleID = '/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_shade_calc.c_EvalWaveFormClamped.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/renderergl2/extr_tr_shade_calc.c_EvalWaveFormClamped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (i32*)* @EvalWaveFormClamped to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @EvalWaveFormClamped(i32* %0) #0 {
  %2 = alloca float, align 4
  %3 = alloca i32*, align 8
  %4 = alloca float, align 4
  store i32* %0, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call float @EvalWaveForm(i32* %5)
  store float %6, float* %4, align 4
  %7 = load float, float* %4, align 4
  %8 = fcmp olt float %7, 0.000000e+00
  br i1 %8, label %9, label %10

9:                                                ; preds = %1
  store float 0.000000e+00, float* %2, align 4
  br label %16

10:                                               ; preds = %1
  %11 = load float, float* %4, align 4
  %12 = fcmp ogt float %11, 1.000000e+00
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store float 1.000000e+00, float* %2, align 4
  br label %16

14:                                               ; preds = %10
  %15 = load float, float* %4, align 4
  store float %15, float* %2, align 4
  br label %16

16:                                               ; preds = %14, %13, %9
  %17 = load float, float* %2, align 4
  ret float %17
}

declare dso_local float @EvalWaveForm(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
